syntax="proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace="CarGrpc";

package car;

//Protobuf IDL is a language neutral format for specifying the messages sent and received by gRPC services.

service CarSer{
//Create
rpc CreateCar(CreateCarRequest)returns(CreateCarResponse){}

//Read Single
rpc GetOneCarBySerialNumber(ReadCarRequest)returns(ReadCarResponse){}

//Read List
rpc GetListOfAllCars(GetAllRequest)returns(GetAllResponse){}

//Update
rpc UpdatePriceOfACar(UpdateCarRequest)returns(UpdateCarResponse){}

//Delete
rpc DeleteCarBySerialNumber(DeleteCarRequest)returns(DeleteCarResponse){}
}

message CreateCarRequest{
	int32 serialNumber=1;
	string brand=2;
	string model=3;
	string motor=5;
	int32 seats=6;
	string phoneNumberOwner=7;
	string emailAddressOwner=8;
	int32 price=9;
}

message CreateCarResponse{
	int32 serialNumber=1;
}

message ReadCarRequest{
	int32 serialNumber=1;
}

message ReadCarResponse{
	int32 serialNumber=1;
	string brand=2;
	string model=3;
	string motor=5;
	int32 seats=6;
	string phoneNumberOwner=7;
	string emailAddressOwner=8;
	int32 price=9;
}

message GetAllRequest{
	int32 serialNumber=1;
	string brand=2;
	string model=3;
	string motor=5;
	int32 seats=6;
	string phoneNumberOwner=7;
	string emailAddressOwner=8;
	int32 price=9;
}

message GetAllResponse{
	repeated ReadCarResponse car=1; 
}

message UpdateCarRequest{
	int32 serialNumber=1;
	int32 price=2;
}

message UpdateCarResponse{
	int32 serialNumber=1;
}

message DeleteCarRequest{
	int32 serialNumber=1;
} 

message DeleteCarResponse{
	int32 serialNumber=1;
} 